<resources>
    <string name="app_name">HelloWorld!NataliasApplication</string>
    <string name="my_name">Natalia Gourova 5/4/2021</string>
    <string name="Hello_world">Hello World!</string>
    <string name="bye">Bye!</string>
    <string name="email_address">email address:</string>
    <string name="username">username:</string>
    <string name="date_of_birth">date of birth:</string>
    <string name="name">name:</string>
    <string name="submit">Submit</string>
    <string name="thanks_signup">Thanks for Signing Up %1$s!</string>
    <string name="err_empty_form">Please fill in all the fields.</string>
    <string name="err_dob_too_early">You are under 18yo. Cannot proceed.</string>
    <string name="go_back">back</string>
    <string name="description">Description:</string>
    <string name="occupation">Occupation:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_matches_fragment">THIS IS MATCHES FRAGMENT</string>
    <string name="this_is_settings_fragment">This is settings fragment</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="a_picture_of_the_users_photo">a_picture_of_the_users_photo</string>
    <string name="enable_location_dialog_title">Enable location services</string>
    <string name="enable_location_services_message">Please enable location services to continue</string>
    <string name="location_settings_btn">Location Settings</string>
    <string name="location_permissions_not_granted_message">Location permissions are not granted</string>
</resources>