<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_label" />

    <TextView
        android:id="@+id/email_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_input" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/email_address_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/username_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/username_input_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dob_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        app:layout_constraintTop_toBottomOf="@id/username_input"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dob_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintTop_toBottomOf="@id/dob_input_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@id/dob_input"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/description_label"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/occupation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occupation"
        app:layout_constraintTop_toBottomOf="@id/description_edit"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/occupation_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/occupation_label"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/occupation_edit" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F00"
        android:text="@string/err_empty_form"
        app:layout_constraintTop_toBottomOf="@id/submit_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>